--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hail to the Victors
+<!DOCTYPE html>
+<html>
+<head>
+<title>Hello World</title>
+</head>
+<body>
+
+<h1>Hello!</h1>
+
+<p><a href="file:///Users/samweber/Desktop/homework1.html">Here is the link to Homework 1</a>
+
+</body>
+</html>
