--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Hello!</h1>
 
-<p><a href="file:///Users/samweber/Desktop/homework1.html">Here is the link to Homework 1</a>
+<p><a href="https://github.com/sweber21/sweber21.github.io/tree/master/Wireframes">Here is the link to Homework 2</a>
 
 </body>
 </html>
